2010-03-20  Ethan A Merritt  <merritt@u.washington.edu>

	* PATCHLEVEL: Bump to 4.4.1 and start adding patches added to CVS after
	the code freeze for 4.4.0.

	* src/win/winmain.c: Allow building with Visual C

	* src/win/wgraph.c: Make font changes take immediate effect

	* src/wxterminal/wxt_gui.cpp src/wxterminal/wxt_term.h term/wxt.trm:
	set term wxt ... {dashed|solid} {dashlength <dl>}

	* term/lua/gnuplot-tikz.lua term/lua.trm: Remove tests for gnuplot
	version 4.3.

	* src/internal.c: Handle integer arithmetic overflow.  If i**j or i*j
	would cause integer overflow, return real number value instead.

	* src/internal.c src/internal.h src/util.c:  Protect against runaway
	recursion by limiting depth of function calls to STACK_DEPTH. 

	* src/graphics.c src/plot2d.c tabulate.c docs/gnuplot.doc:
	Allow an optional 6th column in 'with candlesticks' to specify box width

2010-03-13  Version 4.4.0 Release
	    =====================

2010-03-13  Ethan A Merritt  <merritt@u.washington.edu>

	* src/util.c (getusername): Fix segfault if neither USER or USERNAME
	are present in the environment.

2010-03-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (preset): Fix compilation error if XAPPLRESDIR is not
	externally defined.

2010-03-08  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/README docs/Makefile.in docs/pdffigures.tex docs/titlepag.tex:
	Split out dependence on the packages graphicx and picins into a separate
	file (pdffigures.tex) that is only needed by target "make pdffigures".

2010-03-07	TAG CVS Release_4_4_0

2010-03-06  Tatsuro Matsuoka  <tmacchant3@yahoo.co.jp>

	* INSTALL config/makefile.mgw config/makefile.cyg:
	Consolidate the instructions for building using mgw and cygwin into
	their respective makefiles.

2010-03-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (get_data): Both curves in 'with filledcurves' must
	use the same y axis properties.
	Bug #2941257
