@@ -2,6 +2,7 @@
 New features, changes and fixes since gnuplot version 4.4.0
 ===========================================================
 
+* NEW Support the "%s" format specifier in strftime()
 * NEW Optional 6th data column in candlesticks style to specific box width
 * NEW if integer arithmetic i*j or i**j would overflow, return value as a real
 * FIX font glitch in win terminal 
